tests/snapshots/nested_newtypes.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: false
snapshot_kind: text
---
=nested+newtype
