tests/snapshots/nested_newtypes@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
=nested%20newtype
