tests/snapshots/nested_newtypes@query.snap
---
source: tests/test_roundtrip.rs
description: "Outer(Inner(\"nested newtype\"))"
---
=nested+newtype
