tests/snapshots/nested_options-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
opt_opt_string=&
opt_struct[a]=10&
opt_struct[b]=20&
opt_empty_string=
