tests/snapshots/nested_options-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
opt_opt_string=nested&
opt_struct&
opt_empty_string
