tests/snapshots/nested_options.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
opt_struct[a]=10&
opt_struct[b]=20&
opt_empty_string=
