tests/snapshots/nested_options@form-2.snap
---
source: tests/test_roundtrip.rs
description: "NestedOptions { opt_struct: None, opt_empty_string: None }"
---
opt_struct&
opt_empty_string
