tests/snapshots/nested_options@form.snap
---
source: tests/test_roundtrip.rs
description: "NestedOptions { opt_struct: Some(FlatStruct { a: 10, b: 20 }), opt_empty_string: Some(\"\") }"
---
opt_struct%5Ba%5D=10&
opt_struct%5Bb%5D=20&
opt_empty_string=
