tests/snapshots/nested_options@query-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
opt_struct&
opt_empty_string
