tests/snapshots/nested_options@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
opt_struct[a]=10&
opt_struct[b]=20&
opt_empty_string=
